# royal-road-embeddings

./: .dockerignore  .env.dist  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  backfill_errors.py  clean_original_csv.ipynb  create_group_indice.py  docker-compose.yml  eda-notebook.ipynb  err_coordinator.sh  group_testing_qa.ipynb  grouping-test.ipynb  parser  parser_1.py  requirements.txt  reset-db.sh  run-upload.sh  track_errors.py  upload-explorer.ipynb  upload.py
.sqlx/: query-12e8e72a21128f78174fb72fd171e73ed763411a7e16ea768f549d35a67252dc.json  query-2eb5a42c13b77b1328eea7c1df88bc261b314f745db3a2ce4a7242f65e759d25.json  query-3abb3a995d30f01d8b1a673f80e006d6dd1b7f3e17fe0f75b52716b0b11be155.json  query-3e639913c4e9fa3972965f4238bc111f681c1cbbfcb8942363b203ff9622c9fd.json  query-4879efaa1f91c30434c4c84450f33fbcb9f44e1e9dcfa94123d7cf548d57c00a.json  query-4d223cce9b92a5f574de7db3f193b3e7aac1eb9f2cfd0c09911827d46599ca61.json  query-9ba9a87b14190688711bdb107ce3d9aea8337a3ec1e9bdaf954fa465ba77f2d8.json  query-a515a627434fb9e50749eeb5f33f5830be6f47157209aeb4e9d2962a6384be8f.json  query-cafb27ad72c4b9bfc5ff07c76205a9333eab2c062a270f73a9788b63acb43e51.json  query-da9f8f1c7f9c17e84509fd8d2a714938ca9b02e76a08fa90b643cbf587487641.json  query-e12998b6336d33d67c40c7f5e9f5e33be3d0ee43cdbf857871f8df89b23df519.json  query-e3e06f122b1f3fbc00374407dc21a45c8431ecf66ff5ccb310e3da312d6d5060.json  query-f462739a1ae6d2d8867f2c9f4393d06980df4d7a694866830f007b57365e49ab.json
migrations/: 20230827154444_updated-at-trigger-function.down.sql  20230827154444_updated-at-trigger-function.up.sql  20230827160351_create-docembedding-table.down.sql  20230827160351_create-docembedding-table.up.sql  20230829051815_create-docgroupembedding-table.down.sql  20230829051815_create-docgroupembedding-table.up.sql
python_src/: Dockerfile  embeddings.py  requirements.txt
src/: errors.rs  lib.rs  main.rs
src/data/: models.rs
src/handlers/: auth_handler.rs  doc_group_handler.rs  embedding_handler.rs  mod.rs  search_handler.rs
src/operators/: doc_embedding_operator.rs  mod.rs  (+6 more)
tests/: doc_group_tests.rs  embedding_test.rs
