[package]
name = "royal-road-embeddings"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.75"
chrono = { version = "0.4.26", features = ["serde"] }
derive_more = "0.99.17"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.19"
qdrant-client = "1.4.0"
reqwest = { version = "0.11.19", features = ["json"] }
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
time = "0.3.23"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json" ] }
ndarray = "0.15.6"

[dev-dependencies]
actix-rt = "2.9.0"
either = { version = "1.9.0", features = ["serde"] }
